@@ -247,6 +247,10 @@ plot_spectra_no_fc = boolean(default=False)
 # Max number of rows in plots
 plot_spectra_maxrows = integer(default=3)
 plot_traces_maxrows = integer(default=3)
+# Plot ignored traces (low S/N)
+plot_traces_ignored = boolean(default=True)
+# Plot ignored spectra (low S/N)
+plot_spectra_ignored = boolean(default=True)
 # Plot station map
 plot_station_map = boolean(default=False)
 # Plot station names on map
