@@ -52,8 +52,7 @@ def main():
     plotter = init_plotting(config)
     ntr = len(set(t.id[:-1] for t in proc_st))
     ncols = 4 if ntr > 6 else 3
-    plot_traces(config, proc_st, spec_st=spec_st, ncols=ncols,
-                async_plotter=plotter)
+    plot_traces(config, proc_st, ncols=ncols, async_plotter=plotter)
 
     # Spectral inversion
     sourcepar, sourcepar_err =\
